# Gabrain

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: brainfuck.h  command.h  util.h
src/: brainfuck.c  command.c  main.c  util.c
template/: test.bf
